--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Corpses/civilians.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Corpses/civilians.yml
@@ -369,6 +369,12 @@
     back:
     - RMCRadioHandheldColonyOff
 
+- type: randomHumanoidSettings
+  parent: RMCCorpseWeYaPMCStandard
+  id: RMCCorpseWeYaPMCStandardBurst
+  components:
+  - type: VictimBurst
+
 # Corporate Supervisor
 - type: randomHumanoidSettings
   parent: RMCCorpse
