changed grape plant display name, added oat seeds to vending machine (for oatmeal/oatmeal cookies)

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/vending_machines.yml
@@ -384,6 +384,7 @@
     SunflowerSeeds: 2
     TomatoSeeds: 3
     WheatSeeds: 3
+    OatSeeds: 3
     AppleSeeds: 3
     PoppySeeds: 3
     SugarcaneSeeds: 3
