--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/praetorian.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/praetorian.yml
@@ -166,6 +166,7 @@
     - ActionXenoFightOrFlight
     - ActionXenoRetrieve
     - ActionXenoDevolve
+    - ActionXenoAcidNormal
     hidden: true
   - type: XenoStrain
     name: rmc-xeno-valkyrie-name
