re add Xenocomponent to berserker entity

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
@@ -164,6 +164,7 @@
   components:
   - type: Sprite
     sprite: _RMC14/Mobs/Xenonids/Ravager/berserker_ravager.rsi
+  - type: Xeno
     actionIds:
     - ActionXenoRest
     - ActionXenoRegurgitate
