--- a/Resources/Prototypes/_RMC14/Entities/Tiles/tile_fire.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Tiles/tile_fire.yml
@@ -60,7 +60,7 @@
   - type: RMCScorchEffectOnSpawn
     decalTag: burnt
     tileLimit: 3
-  - type: BlockWeedSpread
+  - type: BlockWeeds
 
 - type: entity
   parent: RMCTileFire
