Fix praetorian acid ball and nades not having target caps, acid ball hitting friendlies

--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Launchers/m74_airburst_grenades.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Launchers/m74_airburst_grenades.yml
@@ -146,6 +146,7 @@
       path: /Audio/Effects/gen_hit.ogg
   - type: ClusterLimitHits
     limit: 0
+    ignoreFirstHit: true
   - type: CMExplosionEffect
     maxShrapnel: 0
   - type: ContainerContainer
