--- a/Resources/Prototypes/_RMC14/Entities/Objects/Xeno/xeno_projectiles.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Xeno/xeno_projectiles.yml
@@ -383,6 +383,7 @@
   - type: ProjectileGrenade
     fillPrototype: XenoAcidBallSpitProjectile
     capacity: 14
+    directHit: false
   - type: ProjectileMaxRange
     max: 5
     delete: false
@@ -416,4 +417,4 @@
   - type: RMCProjectileAccuracy
     accuracy: 185
   - type: XenoHookOnHit
- 
+
