--- a/Resources/Prototypes/_RMC14/Entities/Structures/Base/base_structure.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Base/base_structure.yml
@@ -103,6 +103,9 @@
     color: "#ebe5e5ee"
   - type: IsRoof
   - type: SunShadowCast
+  - type: Tag
+    tags:
+    - Wall
 
 - type: entity
   abstract: true
