Clean up suit storage comp yaml

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/coats.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/OuterClothing/coats.yml
@@ -23,7 +23,7 @@
     allowedWhitelist: RMCAllowSuitStorageClothingJacket
     user:
       components:
-      - RMCSurvivor
+      - RMCAllowSuitStorage
 
 - type: entity
   abstract: True
