--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_deputy.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_deputy.yml
@@ -33,6 +33,7 @@
     - type: SquadArmorWearer
     - type: JobPrefix
       prefix: rmc-job-prefix-bureau-deputy
+    - type: RMCAllowSuitStorage
   hidden: true
 
 - type: entity
