--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_marshal.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_marshal.yml
@@ -37,6 +37,7 @@
       prefix: rmc-job-prefix-bureau-marshal
     - type: RMCPointing
     - type: MarineOrders
+    - type: RMCAllowSuitStorage
   hidden: true
 
 - type: entity
