--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/security_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/security_survivor.yml
@@ -32,6 +32,7 @@
       factions:
       - Survivor
     - type: IntelRescueSurvivorObjective
+    - type: RMCAllowSuitStorage
 
 - type: startingGear
   id: RMCGearSurvivorSecurity
