Fix reagent tanks getting stuck on chairs

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Furniture/chairs.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Furniture/chairs.yml
@@ -5,6 +5,15 @@
   id: CMSeatBase
   name: abstract chair
   components:
+  - type: Fixtures
+    fixtures:
+      fix1:
+        shape:
+          !type:PhysShapeCircle
+          radius: 0.2
+        density: 100
+        mask:
+        - HighImpassable
   - type: Corrodible
     timeToApply: 4
     structure: true
