--- a/Resources/Prototypes/_RMC14/Entities/Structures/Storage/reagent_tank.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Storage/reagent_tank.yml
@@ -24,7 +24,8 @@
         mask:
         - MachineMask
         layer:
-        - MobMask
+        - Impassable
+        - MidImpassable
         - BulletImpassable
   - type: Destructible
     thresholds:
