--- a/Resources/Prototypes/_RMC14/Entities/Structures/Storage/reagent_tank.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Storage/reagent_tank.yml
@@ -24,8 +24,7 @@
         mask:
         - MachineMask
         layer:
-        - Impassable
-        - MidImpassable
+        - HighImpassable
         - BulletImpassable
   - type: Destructible
     thresholds:
