Fix xenonid eggs hiding under dead mobs

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Species/base.yml
@@ -368,3 +368,6 @@
       8: 8
   - type: XenoToggleChargingKnockback
   - type: XenoToggleChargingParalyze
+  - type: RMCMobStateDrawDepth
+    drawDepths:
+      Dead: DeadMobs
