--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/medical.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/medical.yml
@@ -145,7 +145,9 @@
   suffix: ""
   components:
   - type: AccessReader
-    access: [["CMAccessMedical"]]
+    access:
+    - [ "CMAccessMedical" ]
+    - [ "CMAccessDropship" ]
 
 - type: entity
   parent: CMVendorMedical
@@ -338,6 +340,7 @@
   - type: AccessReader
     access:
     - [ "CMAccessMedical" ]
+    - [ "CMAccessDropship" ]
   - type: CMAutomatedVendor
     hackable: true
     sections:
