Fix berserker rav speed

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/ravager.yml
@@ -182,9 +182,7 @@
   - type: CMArmor
     xenoArmor: 30
     explosionArmor: 80
-  - type: MovementSpeedModifier
-    baseWalkSpeed: 2.5
-    baseSprintSpeed: 4.1
+  - type: MovementSpeedModifier # This is not actually faster in 13 at base if you test it
   - type: XenoShield
   - type: XenoStrain
     name: rmc-xeno-berserker-name
