Migration GrenadeFlashBang > RMCGrenadeFlashBang

--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -1145,3 +1145,6 @@ RMCVendorBundleXOShotgun: WeaponShotgunM890
 
 # 2025-05-05
 RMCArmorHelmetM12Dust: CMArmorHelmetM12
+
+# 2025-05-20
+GrenadeFlashBang: RMCGrenadeFlashBang
