Changed the way acces was given from vend-side to role access group side.

--- a/Resources/Prototypes/_RMC14/Access/Groups/auxiliary_support_access_groups.yml
+++ b/Resources/Prototypes/_RMC14/Access/Groups/auxiliary_support_access_groups.yml
@@ -30,6 +30,8 @@
   - CMAccessDropship
   - CMAccessPilot
   - CMAccessCrewman
+  - CMAccessMedical
+
 
 - type: accessGroup
   id: DropshipCrewChief
@@ -38,6 +40,7 @@
   - CMAccessCommand
   - CMAccessDropship
   - CMAccessPilot
+  - CMAccessMedical
 
 - type: accessGroup
   id: IntelOfficer
