--- a/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/medical.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Machines/Vending/medical.yml
@@ -145,9 +145,7 @@
   suffix: ""
   components:
   - type: AccessReader
-    access:
-    - [ "CMAccessMedical" ]
-    - [ "CMAccessDropship" ]
+    access: [["CMAccessMedical"]]
 
 - type: entity
   parent: CMVendorMedical
@@ -340,7 +338,6 @@
   - type: AccessReader
     access:
     - [ "CMAccessMedical" ]
-    - [ "CMAccessDropship" ]
   - type: CMAutomatedVendor
     hackable: true
     sections:
