--- a/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/rmc_id_clf.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/IdCards/rmc_id_clf.yml
@@ -24,7 +24,7 @@
 
 - type: entity
   parent: CMIDCardBase
-  id: RMCIDCardCLFMedic
+  id: RMCIDCardCLFSpecialist
   name: clf specialists's ID card
   components:
   - type: PresetIdCard
