--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CLF/clf_soldier.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CLF/clf_soldier.yml
@@ -37,8 +37,8 @@
   suffix: Role
   components:
   - type: Sprite
-    sprite: Markers/cross.rsi
-    state: red
+    sprite: _RMC14/Objects/Clothing/Accessory/clf_armband.rsi
+    state: icon
   - type: RandomHumanoidSpawner
     settings: RMCCLFSoldier
 
