--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CLF/clf_specialist.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CLF/clf_specialist.yml
@@ -39,8 +39,8 @@
   suffix: Role
   components:
   - type: Sprite
-    sprite: Markers/cross.rsi
-    state: red
+    sprite: _RMC14/Objects/Clothing/Accessory/clf_armband.rsi
+    state: icon
   - type: RandomHumanoidSpawner
     settings: RMCCLFSpecialist
 
@@ -65,7 +65,8 @@
     shoes: RMCShoesBrown
     id: RMCIDCardCLFSpecialist
     belt: CMM77BeltFilled
-    back: RMCWeaponMar50LMG
+    back: RMCSatchelLightpack
+    suitstorage: RMCWeaponMar50LMG
     pocket1: RMCPouchExplosiveFilledC4SPP
     pocket2: RMCPouchFirstAidERT
   inhand:
