--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/misc_clothing.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/misc_clothing.yml
@@ -3,21 +3,23 @@
   id: RMCEarMiscClothingBase
   abstract: true
   components:
-  - type: Clothing
-    slots:
-    - ears
   - type: Sprite
-    sprite: _RMC14/Objects/Clothing/Ears/earmuffs.rsi
-    state: equipped-EARS
-  - type: Icon
-    sprite: _RMC14/Objects/Clothing/Ears/earmuffs.rsi
     state: icon
   - type: Item
     size: Small
+  - type: Clothing
+    slots:
+    - ears
+    sprite: Clothing/Ears/Headsets/base.rsi
 
 - type: entity
   parent: RMCEarMiscClothingBase
   id: RMCEarmuffs
   name: earmuffs
   description: Protects your hearing from loud noises, and quiet ones as well.
+  components:
+  - type: Sprite
+    sprite: _RMC14/Objects/Clothing/Ears/earmuffs.rsi
+  - type: Clothing
+    sprite: _RMC14/Objects/Clothing/Ears/earmuffs.rsi
   # TODO RMC14 - Wearing this should make you immune to being deafened.
