--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/doctor_survivor.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/doctor_survivor.yml
@@ -35,7 +35,7 @@
   equipment:
     mask: CMMaskSterile
     ears: CMHeadsetColony
-    jumpsuit: CMJumpsuitLiaison
+    jumpsuit: CMJumpsuitLiaisonBlue
     outerClothing: RMCLabcoat
     gloves: CMHandsLatex
     shoes: RMCShoesLaceup
