--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/ingredients.yml
@@ -687,7 +687,7 @@
   - type: Sprite
     state: cheesewheel
   - type: SliceableFood
-    count: 6
+    count: 6 # RMC14
     slice: FoodCheeseSlice
 
 - type: entity
