civilian survivor outfits fix

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/base_forecon.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/ForceRecon/base_forecon.yml
@@ -36,7 +36,7 @@
   categories: [ HideSpawnMenu ]
   components:
   - type: SurvivorPreset
-    randomClothing: # TODO durag and grey beanie
+    randomOutfits: # TODO durag and grey beanie
     - [ RMCHeadCapFlippable ]
     - [ RMCBoonieTan ]
     - [ ArmorHelmetM10 ]
