--- a/Resources/Prototypes/_RMC14/Reagents/Consumable/ingredients.yml
+++ b/Resources/Prototypes/_RMC14/Reagents/Consumable/ingredients.yml
@@ -8,3 +8,14 @@
   physicalDesc: reagent-physical-desc-sweet
   flavor: cherry
   color: "#801E28"
+
+# Peanut Butter
+
+- type: reagent
+  parent: BaseJuice
+  id: RMCPeanutButter
+  name: reagent-name-rmc-peanut-butter
+  desc: reagent-desc-rmc-peanut-butter
+  physicalDesc: reagent-physical-desc-creamy
+  flavor: nutty
+  color: "#BE893F"
