--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/synth.yml
@@ -54,7 +54,7 @@
       icon:
         sprite: _RMC14/Interface/map_blips.rsi
         state: synth
-#  hidden: true
+  hidden: true
 
 - type: startingGear
   id: RMCGearSynthetic
