--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
@@ -51,6 +51,7 @@
       icon:
         sprite: _RMC14/Interface/map_blips.rsi
         state: synth
+  hidden: true
 
 - type: startingGear
   id: RMCGearSyntheticColonist
