--- a/Resources/Prototypes/_RMC14/Roles/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Loadouts/role_loadouts.yml
@@ -562,22 +562,18 @@
   - RMCLoadoutGroupPins
 
 - type: roleLoadout
-  id: JobRMCSynthetic
+  id: JobRMCJobSynthetic
   points: 7
   groups:
-  - MarineBackpack
-  - HeadwearRMC
-  - EyewearRMC
-  - MasksRMC
+  - SynthBackpackRMC
+  - SynthHeadwearRMC
+  - SynthGlassesRMC
+  - SynthMasksRMC
   - HelmetGarbsRMC
+  - SynthUniformRMC
+  - SynthSuitsRMC
   - PaperworkRMC
   - PlushiesRMC
-  - WeaponsRMC
-  - CannedDrinksRMC
-  - FlasksRMC
-  - FoodSweetsRMC
-  - FoodPackagedRMC
-  - FoodHealthyRMC
   - RMCLoadoutGroupPins
 
 # Requsitions
