--- a/Resources/Prototypes/_RMC14/Entities/Markers/Spawners/Random/posters.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Markers/Spawners/Random/posters.yml
@@ -45,7 +45,7 @@
     - CMPosterMrUniverse1
     - CMPosterMrUniverse2
     - CMPosterMrUniverse3
-    - CMPosterWalkman
+    - RMCPosterCassettePlayer
     - CMPosterTAB
     - CMPosterBepis
     - CMPosterMTV
