--- a/Resources/Prototypes/_RMC14/Entities/Structures/Wallmounts/Signs/posters.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Wallmounts/Signs/posters.yml
@@ -349,7 +349,7 @@
 
 - type: entity
   parent: CMPosterBase
-  id: CMPosterCassettePlayer
+  id: RMCPosterCassettePlayer
   name: "Cassette Player"
   description: "This poster depicts a cassette player and reads 'Don't Forget Your Cassette Player.'"
   components:
